tests/integration/manifests/network/client.yaml
# Copyright 2026, EOX (https://eox.at) and Versioneer (https://versioneer.at)
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: __NAMESPACE__
spec:
  restartPolicy: Never
  containers:
    - name: client
      image: __CLIENT_IMAGE__
      imagePullPolicy: IfNotPresent
      command:
        - sleep
        - "3600"
