tests/integration/manifests/network/server.yaml
# Copyright 2026, EOX (https://eox.at) and Versioneer (https://versioneer.at)
# SPDX-License-Identifier: Apache-2.0

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: nginx
          image: __SERVER_IMAGE__
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: __NAMESPACE__
spec:
  selector:
    app: echo
  ports:
    - name: http
      port: 80
      targetPort: 80
